--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,17 @@
     "version": 2,
     "builds": [
       {
-        "src": "manage.py",
+        "src": "/config/wsgi.py",
         "use": "@vercel/python",
         "config": {
-          "maxLambdaSize": "50mb"
+          "maxLambdaSize": "50mb",
+          "runtime": "python3.9"
         }
       }
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
+        "src": "/(.*)",
         "dest": "/config/wsgi.py"
       }
     ]
